@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_config.h,v 1.57.2.1 2006-10-30 00:58:34 chu11 Exp $
+ *  $Id: cerebrod_config.h,v 1.57.2.2 2006-10-30 22:02:13 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -54,10 +54,13 @@
 #define CEREBROD_METRIC_CONTROLLER_DEFAULT                   1
 #define CEREBROD_METRIC_SERVER_DEFAULT                       1
 #define CEREBROD_METRIC_SERVER_PORT_DEFAULT                  CEREBRO_METRIC_SERVER_PORT
+#define CEREBROD_EVENT_SERVER_DEFAULT                        1
+#define CEREBROD_EVENT_SERVER_PORT_DEFAULT                   CEREBRO_EVENT_SERVER_PORT
 #define CEREBROD_SPEAK_DEBUG_DEFAULT                         0
 #define CEREBROD_LISTEN_DEBUG_DEFAULT                        0
 #define CEREBROD_METRIC_CONTROLLER_DEBUG_DEFAULT             0
 #define CEREBROD_METRIC_SERVER_DEBUG_DEFAULT                 0
+#define CEREBROD_EVENT_SERVER_DEBUG_DEFAULT                  0
 
 /*
  * struct cerebrod_config 
@@ -94,12 +97,15 @@ struct cerebrod_config
   int metric_controller;
   int metric_server;
   int metric_server_port;
+  int event_server;
+  int event_server_port;
 
 #if CEREBRO_DEBUG
   int speak_debug;
   int listen_debug;
   int metric_controller_debug;
   int metric_server_debug;
+  int event_server_debug;
 #endif /* CEREBRO_DEBUG */
 
   /* Determined by cerebrod based on configuration */
