@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro.h,v 1.22 2006-08-27 18:27:35 chu11 Exp $
+ *  $Id: cerebro.h,v 1.22.2.1 2006-10-30 22:02:13 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -90,11 +90,13 @@
 #define CEREBRO_METRIC_UPDOWN_STATE_NODE_DOWN      0
 
 /* 
- * Metric Server defaults
+ * Server defaults
  */
 #define CEREBRO_METRIC_SERVER_PORT                 8852
 #define CEREBRO_METRIC_SERVER_TIMEOUT_LEN_DEFAULT  60
 #define CEREBRO_METRIC_SERVER_FLAGS_DEFAULT        0
+
+#define CEREBRO_EVENT_SERVER_PORT                  8853
 
 typedef struct cerebro *cerebro_t;
 
