@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_config.h,v 1.6.2.1 2006-10-30 00:58:34 chu11 Exp $
+ *  $Id: cerebro_config.h,v 1.6.2.2 2006-10-30 22:02:14 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -89,6 +89,10 @@ struct cerebro_config
   int cerebrod_metric_server_flag;
   int cerebrod_metric_server_port;
   int cerebrod_metric_server_port_flag;
+  int cerebrod_event_server;
+  int cerebrod_event_server_flag;
+  int cerebrod_event_server_port;
+  int cerebrod_event_server_port_flag;
   int cerebrod_metric_max;
   int cerebrod_metric_max_flag;
 #if CEREBRO_DEBUG
@@ -100,6 +104,8 @@ struct cerebro_config
   int cerebrod_metric_controller_debug_flag;
   int cerebrod_metric_server_debug;
   int cerebrod_metric_server_debug_flag;
+  int cerebrod_event_server_debug;
+  int cerebrod_event_server_debug_flag;
 #endif /* CEREBRO_DEBUG */
 };
 
